--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@feathersjs/authentication-client": "^1.0.8",
     "@feathersjs/feathers": "^3.2.3",
     "@feathersjs/socketio-client": "^1.1.5",
+    "axios": "^0.18.0",
     "feathers-vuex": "^1.6.2",
     "socket.io-client": "^2.1.1",
     "vue": "^2.5.17",
