--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.17",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.0.5",
+    "https-proxy-agent": ">=2.2.0",
+    "growl": ">=1.10.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
